Adding null check for mDocument before getting a document charset, bug 159434, r=caillon, sr=jst, a=asa.